fixed z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ div#banner {
 	display: inline-block;
 	width: 100%;
 	height: 300px;
+	margin-bottom: 10px;
 }
 div#banner a {
 	position: absolute;
@@ -94,6 +95,11 @@ div#banner::before {
 div#banner::after {
 	-webkit-transform: scaleX(-1);
 	transform: scaleX(-1);
+}
+#banner-backdrop {
+	position: absolute;
+	top:0;left:0;right:0;
+	height: 316px;
 }
 
 #nav-menu {
@@ -158,6 +164,7 @@ iframe.photo-container {
 	height: 150px;
 	object-fit: cover;
 	cursor: pointer;
+	border: 1px solid #eee;
 }
 
 #photo-container-expand {
@@ -171,6 +178,7 @@ iframe.photo-container {
 	border: 1px solid black;
 	text-align: center;
 	overflow-y: scroll;
+	z-index: 20;
 }
 #photo-container-expand #photo-title {
 	position: absolute;
@@ -222,11 +230,6 @@ iframe.photo-container {
 		display: none;
 	}
 	
-	div#banner img {
-		height: 150px;
-		width: auto;
-	}
-	
 	#nav-menu {
 		background-image: url('');
 	}
@@ -241,6 +244,10 @@ iframe.photo-container {
 	
 	div#banner a.banner-mobile {
 		display: none;
+	}
+	
+	#banner-backdrop {
+		left: 200px;
 	}
 	
 	.col-container {
